create folder and list
