# app/Http/Requests/Lists/ListItemRequest.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Requests\Lists;
+
+use App\Enums\ListStatus;
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
+
+class ListItemRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, ValidationRule|array|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'folder_id' => ['required', 'integer'],
+            'title' => ['required', 'string', 'max:25'],
+        ];
+    }
+}
